# StandardStitch

./: .gitignore
backend/: .env.example  STEP5_IMPLEMENTATION.md  pyproject.toml  requirements.txt
backend/accounts/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/accounts/migrations/: 0001_initial.py
backend/catalog/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/catalog/migrations/: 0001_initial.py  0002_add_performance_indexes.py  0003_add_optimized_indexes.py
backend/checkout/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/checkout/migrations/: 0001_initial.py  0002_order_orderitem_order_idx_order_user_status_and_more.py  0003_add_cart_index.py
backend/config/: settings.py  test_runner.py  urls.py
backend/config/management/commands/: flush_test_db.py  kill_test_db_sessions.py
backend/schools/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/schools/migrations/: 0001_initial.py  0002_add_trigram_index.py
backend/tests/: test_integration_flow.py  test_vendor_flow.py
backend/vendors/: admin.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
backend/vendors/migrations/: 0001_initial.py  0002_add_price_cap_constraint.py  0003_add_performance_indexes.py  0004_add_vendor_user_and_gst.py  0005_add_listing_indexes.py
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  types.ts
frontend/src/components/: Layout.tsx
(+15 files in other folders)
