[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.8",
    "django-silk>=5.4.3",
    "djangorestframework>=3.16.1",
    "pyjwt>=2.10.1",
    "pytest>=9.0.1",
    "python-dotenv>=1.2.1",
    "ruff>=0.14.5",
    "testcontainers>=4.13.3",
]
